--- a/devs/abel.html
+++ b/devs/abel.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>Add commentMore actions
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -21,5 +21,5 @@
       <li><a href="#">Mi experiencia usando GitHub</a></li>
     </ul>
   </div>
-</body>Add commentMore actions
+</body>
 </html>
